--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,6 +1,3 @@
-
-
-
 @font-face {
     font-family: 'silkscreennormal';
     src: url('slkscr-webfont.woff2') format('woff2'),
@@ -8,4 +5,7 @@
     font-weight: normal;
     font-style: normal;
 
+}
+.scn1{
+    font-family: 'silkcreennormal';
 }
